correct spacing in social panel
closes #200

--- a/styles/_landing.scss
+++ b/styles/_landing.scss
@@ -318,7 +318,7 @@
         float: left;
         max-width: 430px;
         width: 100%;
-        margin-left: 160px;
+        margin-left: 70px;
 
         img {
             display: block;
